# uPong

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  uPong.c  ws2812.pio
src/: fonts.h  fonts.hpp  perf_log.txt  pong_game.cpp  pong_game.h  pong_game.hpp  rotary_encoder.cpp  rotary_encoder.h  rotary_encoder.hpp  screen.cpp  screen.h  screen.hpp  screen_defs.h  screen_misc.h  screen_primitives.h  screen_primitives.hpp  uPong.c  uPong.cpp  uPong_tests.h  ws2812.cpp  ws2812.hpp  ws2812.pio  ws2812_defs.h  ws2812_dma.h  ws2812_misc.h
tests/: CMakeLists.txt  game_logic.cpp  game_logic.hpp
tests/mocks/: rotary_encoder_mock.cpp  rotary_encoder_mock.hpp  screen_mock.cpp  screen_mock.hpp  screen_primitives_mock.cpp  screen_primitives_mock.hpp  ws2812_mock.cpp  ws2812_mock.hpp
tests/unit/: test_collision_detection.cpp  test_main.cpp  test_movable_point.cpp  test_point_vector.cpp
